# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Added
	- `System` implementation (`core/fg42/system.el`)
	- New `extensions` implementation (`core/fg42/extensions.el`)
	- New approach to launching fg42
### Changed
	- Changed the main package path to `/core`
	- Changed the extensions path to `/extensions`
	- We don't load `fg42-config.el` anymore
	- We don't load anything from `/lib` anymore