@@ -1,0 +1,30 @@
+;;; FG42ByteCompiler --- The byte compiler for FG42 libraries and extensions
+;;
+;; Copyright (c) 2010-2020  Sameer Rahmani <lxsameer@gnu.org>
+;;
+;; Author: Sameer Rahmani <lxsameer@gnu.org>
+;; URL: https://gitlab.com/FG42/FG42
+;; Version: 3.0.0
+;;
+;; This program is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation, either version 3 of the License, or
+;; (at your option) any later version.
+;;
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+;;
+;; You should have received a copy of the GNU General Public License
+;; along with this program.  If not, see <http://www.gnu.org/licenses/>.
+;;
+;;
+;;; Commentary:
+;;; Code:
+
+(add-to-list 'load-path (concat (getenv "FG42_HOME") "/core"))
+
+(message "Compiling FG42 core...")
+(byte-recompile-directory (concat (getenv "FG42_HOME") "/core") 0 t)
+;;; compiler.el ends here
